# CS282-Mini-Project

./: .dropbox  Documentation.docx
FeatureExtractor/: CMakeLists.txt  color_extractor.cc  color_extractor.h  evaluator.cc  evaluator.h  feature_extractor.cc  feature_extractor.h  opencv_lbp_extractor.cc  opencv_lbp_extractor.h  opencv_sift_extractor.cc  opencv_sift_extractor.h  sampler.cc  sampler.h  sift_lbp_extractor.cc  sift_lbp_extractor.h  utils.cc  utils.h
FeatureExtractor/nbproject/private/: Evaluate.properties  Extract.properties
FeatureExtractor/resources/: Small1.txt  Test Set 1.txt  Test Set 2.txt  Test Set 3.txt  Training Set 1.txt  Training Set 2.txt  Training Set 3.txt
codes/: file_foods.txt  main.cpp  test_main.cpp
